Remove CSS from JS bundles

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -7,10 +7,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1710269601790">
-	<link rel="stylesheet" href="/404.html.css?cache=1710269601790"> <script src="/browser.js?cache=1710269601790" type="module"></script> <script type="module">import { ErrorPage } from '/error-6PFS3S3C.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1716082975889">
+	<link rel="stylesheet" href="/404.html.css?cache=1716082975889"> <script src="/browser.js?cache=1716082975889" type="module"></script> <script type="module">import { ErrorPage } from '/error-XQONYMDW.js';</script>
 	<style data-style="l-modalcontainer"></style>
-	<style data-style="l-nav"></style>
+	<link href="/l-nav.css" rel="stylesheet">
 </head>
 
 <body is="l-app">
