--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,14 +7,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1713073690508">
-	<link rel="stylesheet" href="/index.html.css?cache=1713073690508"> <script src="/browser.js?cache=1713073690508" type="module"></script> <script type="module">import { IndexPage } from '/pages-FR2OCYMM.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1716082975930">
+	<link rel="stylesheet" href="/index.html.css?cache=1716082975930"> <script src="/browser.js?cache=1716082975930" type="module"></script> <script type="module">import { IndexPage } from '/pages-3G3ENLJ6.js';</script>
 	<style data-style="l-modalcontainer"></style>
-	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
+	<link href="/l-nav.css" rel="stylesheet">
+	<link href="/l-indexpage.css" rel="stylesheet">
 </head>
 
 <body is="l-app">
