extract out remaining style files

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -7,10 +7,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1716082975889">
-	<link rel="stylesheet" href="/404.html.css?cache=1716082975889"> <script src="/browser.js?cache=1716082975889" type="module"></script> <script type="module">import { ErrorPage } from '/error-XQONYMDW.js';</script>
-	<style data-style="l-modalcontainer"></style>
-	<link href="/l-nav.css" rel="stylesheet">
+	<link rel="stylesheet" href="/styles.css?cache=1716128543376"> <script src="/browser.js?cache=1716128543376" type="module"></script> <script type="module">import { ErrorPage } from '/error-C5OPTEK2.js';</script>
+	<link href="/l-modalcontainer.css?cache=1716128543354" rel="stylesheet">
+	<link href="/l-nav.css?cache=1716128543356" rel="stylesheet">
 </head>
 
 <body is="l-app">
