--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,15 +7,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1716082975930">
-	<link rel="stylesheet" href="/index.html.css?cache=1716082975930"> <script src="/browser.js?cache=1716082975930" type="module"></script> <script type="module">import { IndexPage } from '/pages-3G3ENLJ6.js';</script>
-	<style data-style="l-modalcontainer"></style>
-	<style data-style="l-textbox"></style>
-	<style data-style="l-progressmodal"></style>
-	<style data-style="l-transitiontest"></style>
+	<link rel="stylesheet" href="/styles.css?cache=1716128543415">
+	<link rel="stylesheet" href="/index.html.css?cache=1716128543415"> <script src="/browser.js?cache=1716128543415" type="module"></script> <script type="module">import { IndexPage } from '/pages-LOXSD7XH.js';</script>
 	<style data-style="l-indexpage"></style>
-	<link href="/l-nav.css" rel="stylesheet">
-	<link href="/l-indexpage.css" rel="stylesheet">
+	<link href="/l-modalcontainer.css?cache=1716128543354" rel="stylesheet">
+	<link href="/l-nav.css?cache=1716128543356" rel="stylesheet">
+	<link href="/l-textbox.css?cache=1716128543399" rel="stylesheet">
+	<link href="/l-progressmodal.css?cache=1716128543400" rel="stylesheet">
+	<link href="/l-transitiontest.css?cache=1716128543401" rel="stylesheet">
+	<link href="/l-indexpage.css?cache=1716128543401" rel="stylesheet">
 </head>
 
 <body is="l-app">
