--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -7,11 +7,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SSG yes</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1716083047483">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1716083047483"> <script src="/browser.js?cache=1716083047483" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-3Z5F6TX4.js';</script>
-	<style data-style="l-modalcontainer"></style>
+	<link rel="stylesheet" href="/styles.css?cache=1716128543429">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1716128543429"> <script src="/browser.js?cache=1716128543429" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-AVXFRNPB.js';</script>
 	<style data-style="l-yesssgpage"></style>
-	<link href="/l-nav.css" rel="stylesheet">
+	<link href="/l-modalcontainer.css?cache=1716128543354" rel="stylesheet">
+	<link href="/l-nav.css?cache=1716128543356" rel="stylesheet">
 </head>
 
 <body is="l-app">
