--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta name="description" content="Error 404">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Error 404</title>
-	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1716128543376"> <script src="/browser.js?cache=1716128543376" type="module"></script> <script type="module">import { ErrorPage } from '/error-C5OPTEK2.js';</script>
-	<link href="/l-modalcontainer.css?cache=1716128543354" rel="stylesheet">
-	<link href="/l-nav.css?cache=1716128543356" rel="stylesheet">
-</head>
-
-<body is="l-app">
-	<nav is="l-nav">
-		<ul>
-			<li id="nav-error404"> Active: <a href="/404.html">Go error404</a> </li>
-			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
-			<li id="nav-home"> <a href="/">Go home</a> </li>
-			<li id="nav-homeJump1"> <a href="/#jump1">Go homeJump1</a> </li>
-			<li id="nav-homeJump2"> <a href="/#jump2">Go homeJump2</a> </li>
-			<li id="nav-ssgNo"> <a href="/ssg/no/">Go ssgNo</a> </li>
-			<li id="nav-ssgYes"> <a href="/ssg/yes/">Go ssgYes</a> </li>
-			<li id="nav-ssgYesJump1"> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
-			<li id="nav-ssgYesJump2"> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
-		</ul>
-	</nav>
-	<main is="l-errorpage" data-page-title="Error 404">
-		<h1>404 page :(</h1>
-	</main>
-</body>
-
+	<head>
+		<meta content="Error 404" name="description" />
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+		<title>Error 404</title>
+		<base href="/" />
+		<link href="/styles.css?cache=1717989051347" rel="stylesheet" />
+		<script type="module" src="/browser.js?cache=1717989051347"></script>
+		<script type="module">import { ErrorPage } from '/error-ENQUG35M.js';</script>
+		<link href="/l-modalcontainer.css?cache=1717989051325" rel="stylesheet" />
+		<link href="/l-nav.css?cache=1717989051327" rel="stylesheet" />
+	</head>
+	<body is="l-app">
+		<nav is="l-nav">
+			<ul>
+				<li id="nav-error404">
+					Active: 			<a href="/404.html">Go error404</a>
+				</li>
+				<li id="nav-external">
+					<a href="https://example.com/" rel="noreferrer" target="_blank">Go external</a>
+				</li>
+				<li id="nav-home">
+					<a href="/">Go home</a>
+				</li>
+				<li id="nav-homeJump1">
+					<a href="/#jump1">Go homeJump1</a>
+				</li>
+				<li id="nav-homeJump2">
+					<a href="/#jump2">Go homeJump2</a>
+				</li>
+				<li id="nav-ssgNo">
+					<a href="/ssg/no/">Go ssgNo</a>
+				</li>
+				<li id="nav-ssgYes">
+					<a href="/ssg/yes/">Go ssgYes</a>
+				</li>
+				<li id="nav-ssgYesJump1">
+					<a href="/ssg/yes/#jump1">Go ssgYesJump1</a>
+				</li>
+				<li id="nav-ssgYesJump2">
+					<a href="/ssg/yes/#jump2">Go ssgYesJump2</a>
+				</li>
+			</ul>
+		</nav>
+		<main data-page-title="Error 404" is="l-errorpage">
+			<h1>404 page :(</h1>
+		</main>
+	</body>
 </html>
