--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -1,38 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta name="description" content="SSG yes">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>SSG yes</title>
-	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1716128543429">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1716128543429"> <script src="/browser.js?cache=1716128543429" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-AVXFRNPB.js';</script>
-	<style data-style="l-yesssgpage"></style>
-	<link href="/l-modalcontainer.css?cache=1716128543354" rel="stylesheet">
-	<link href="/l-nav.css?cache=1716128543356" rel="stylesheet">
-</head>
-
-<body is="l-app">
-	<nav is="l-nav">
-		<ul>
-			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
-			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
-			<li id="nav-home"> <a href="/">Go home</a> </li>
-			<li id="nav-homeJump1"> <a href="/#jump1">Go homeJump1</a> </li>
-			<li id="nav-homeJump2"> <a href="/#jump2">Go homeJump2</a> </li>
-			<li id="nav-ssgNo"> <a href="/ssg/no/">Go ssgNo</a> </li>
-			<li id="nav-ssgYes"> Active: <a href="/ssg/yes/">Go ssgYes</a> </li>
-			<li id="nav-ssgYesJump1"> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
-			<li id="nav-ssgYesJump2"> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
-		</ul>
-	</nav>
-	<main is="l-yesssgpage" data-page-title="SSG yes">
-		<h1>SSG yes</h1>
-		<div id="jump1">Jump 1</div>
-		<div id="jump2">Jump 2</div>
-	</main>
-</body>
-
+	<head>
+		<meta content="SSG yes" name="description" />
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+		<title>SSG yes</title>
+		<base href="/" />
+		<link href="/styles.css?cache=1717989051387" rel="stylesheet" />
+		<link href="/ssg/yes/index.html.css?cache=1717989051387" rel="stylesheet" />
+		<script type="module" src="/browser.js?cache=1717989051387"></script>
+		<script type="module">import { YesSSGPage } from '/ssg-yes-3D4QYNOP.js';</script>
+		<style data-style="l-yesssgpage"></style>
+		<link href="/l-modalcontainer.css?cache=1717989051325" rel="stylesheet" />
+		<link href="/l-nav.css?cache=1717989051327" rel="stylesheet" />
+	</head>
+	<body is="l-app">
+		<nav is="l-nav">
+			<ul>
+				<li id="nav-error404">
+					<a href="/404.html">Go error404</a>
+				</li>
+				<li id="nav-external">
+					<a href="https://example.com/" rel="noreferrer" target="_blank">Go external</a>
+				</li>
+				<li id="nav-home">
+					<a href="/">Go home</a>
+				</li>
+				<li id="nav-homeJump1">
+					<a href="/#jump1">Go homeJump1</a>
+				</li>
+				<li id="nav-homeJump2">
+					<a href="/#jump2">Go homeJump2</a>
+				</li>
+				<li id="nav-ssgNo">
+					<a href="/ssg/no/">Go ssgNo</a>
+				</li>
+				<li id="nav-ssgYes">
+					Active: 			<a href="/ssg/yes/">Go ssgYes</a>
+				</li>
+				<li id="nav-ssgYesJump1">
+					<a href="/ssg/yes/#jump1">Go ssgYesJump1</a>
+				</li>
+				<li id="nav-ssgYesJump2">
+					<a href="/ssg/yes/#jump2">Go ssgYesJump2</a>
+				</li>
+			</ul>
+		</nav>
+		<main data-page-title="SSG yes" is="l-yesssgpage">
+			<h1>SSG yes</h1>
+			<div id="jump1">Jump 1</div>
+			<div id="jump2">Jump 2</div>
+		</main>
+	</body>
 </html>
