ncu for html-eslint update

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -6,11 +6,11 @@
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<title>Error 404</title>
 		<base href="/" />
-		<link href="/styles.css?cache=1717989051347" rel="stylesheet" />
-		<script type="module" src="/browser.js?cache=1717989051347"></script>
-		<script type="module">import { ErrorPage } from '/error-ENQUG35M.js';</script>
-		<link href="/l-modalcontainer.css?cache=1717989051325" rel="stylesheet" />
-		<link href="/l-nav.css?cache=1717989051327" rel="stylesheet" />
+		<link href="/styles.css?cache=1718897750473" rel="stylesheet" />
+		<script src="/browser.js?cache=1718897750473" type="module"></script>
+		<script type="module">import { ErrorPage } from '/error-FZUFS3VU.js';</script>
+		<link href="/l-modalcontainer.css?cache=1718897750450" rel="stylesheet" />
+		<link href="/l-nav.css?cache=1718897750452" rel="stylesheet" />
 	</head>
 	<body is="l-app">
 		<nav is="l-nav">
@@ -19,7 +19,11 @@
 					Active: 			<a href="/404.html">Go error404</a>
 				</li>
 				<li id="nav-external">
-					<a href="https://example.com/" rel="noreferrer" target="_blank">Go external</a>
+					<a
+						href="https://example.com/"
+						rel="noreferrer"
+						target="_blank"
+					>Go external</a>
 				</li>
 				<li id="nav-home">
 					<a href="/">Go home</a>
