--- a/util/browser.spec.html
+++ b/util/browser.spec.html
@@ -11,6 +11,6 @@ svg {
 	<body>
 		<p>Specs</p>
 
-		<script type="module" src="/browser.spec.js"></script>
+		<script src="/browser.spec.js" type="module"></script>
 	</body>
 </html>
