--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -6,13 +6,13 @@
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<title>SSG yes</title>
 		<base href="/" />
-		<link href="/styles.css?cache=1717989051387" rel="stylesheet" />
-		<link href="/ssg/yes/index.html.css?cache=1717989051387" rel="stylesheet" />
-		<script type="module" src="/browser.js?cache=1717989051387"></script>
-		<script type="module">import { YesSSGPage } from '/ssg-yes-3D4QYNOP.js';</script>
+		<link href="/styles.css?cache=1718897750515" rel="stylesheet" />
+		<link href="/ssg/yes/index.html.css?cache=1718897750515" rel="stylesheet" />
+		<script src="/browser.js?cache=1718897750515" type="module"></script>
+		<script type="module">import { YesSSGPage } from '/ssg-yes-I6V7B6M5.js';</script>
 		<style data-style="l-yesssgpage"></style>
-		<link href="/l-modalcontainer.css?cache=1717989051325" rel="stylesheet" />
-		<link href="/l-nav.css?cache=1717989051327" rel="stylesheet" />
+		<link href="/l-modalcontainer.css?cache=1718897750450" rel="stylesheet" />
+		<link href="/l-nav.css?cache=1718897750452" rel="stylesheet" />
 	</head>
 	<body is="l-app">
 		<nav is="l-nav">
@@ -21,7 +21,11 @@
 					<a href="/404.html">Go error404</a>
 				</li>
 				<li id="nav-external">
-					<a href="https://example.com/" rel="noreferrer" target="_blank">Go external</a>
+					<a
+						href="https://example.com/"
+						rel="noreferrer"
+						target="_blank"
+					>Go external</a>
 				</li>
 				<li id="nav-home">
 					<a href="/">Go home</a>
