--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8" />
 		<meta content="Error 404" name="description" />
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<title>Error 404</title>
 		<base href="/" />
-		<link href="/styles.css?cache=1718897750473" rel="stylesheet" />
-		<script src="/browser.js?cache=1718897750473" type="module"></script>
+		<link href="/styles.css?cache=1718910064220" rel="stylesheet" />
+		<script src="/browser.js?cache=1718910064220" type="module"></script>
 		<script type="module">import { ErrorPage } from '/error-FZUFS3VU.js';</script>
-		<link href="/l-modalcontainer.css?cache=1718897750450" rel="stylesheet" />
-		<link href="/l-nav.css?cache=1718897750452" rel="stylesheet" />
+		<link href="/l-modalcontainer.css?cache=1718910064196" rel="stylesheet" />
+		<link href="/l-nav.css?cache=1718910064198" rel="stylesheet" />
 	</head>
 	<body is="l-app">
 		<nav is="l-nav">
