--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8" />
 		<meta content="Home page" name="description" />
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<title>Home page</title>
 		<base href="/" />
-		<link href="/styles.css?cache=1718897750505" rel="stylesheet" />
-		<link href="/index.html.css?cache=1718897750505" rel="stylesheet" />
-		<script src="/browser.js?cache=1718897750505" type="module"></script>
+		<link href="/styles.css?cache=1718910064251" rel="stylesheet" />
+		<link href="/index.html.css?cache=1718910064251" rel="stylesheet" />
+		<script src="/browser.js?cache=1718910064251" type="module"></script>
 		<script type="module">import { IndexPage } from '/pages-TSXAJQYJ.js';</script>
 		<style data-style="l-indexpage"></style>
-		<link href="/l-modalcontainer.css?cache=1718897750450" rel="stylesheet" />
-		<link href="/l-nav.css?cache=1718897750452" rel="stylesheet" />
-		<link href="/l-textbox.css?cache=1718897750490" rel="stylesheet" />
-		<link href="/l-progressmodal.css?cache=1718897750491" rel="stylesheet" />
-		<link href="/l-transitiontest.css?cache=1718897750492" rel="stylesheet" />
-		<link href="/l-indexpage.css?cache=1718897750492" rel="stylesheet" />
+		<link href="/l-modalcontainer.css?cache=1718910064196" rel="stylesheet" />
+		<link href="/l-nav.css?cache=1718910064198" rel="stylesheet" />
+		<link href="/l-textbox.css?cache=1718910064234" rel="stylesheet" />
+		<link href="/l-progressmodal.css?cache=1718910064235" rel="stylesheet" />
+		<link href="/l-transitiontest.css?cache=1718910064236" rel="stylesheet" />
+		<link href="/l-indexpage.css?cache=1718910064237" rel="stylesheet" />
 	</head>
 	<body is="l-app">
 		<nav is="l-nav">
