--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8" />
 		<meta content="SSG yes" name="description" />
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<title>SSG yes</title>
 		<base href="/" />
-		<link href="/styles.css?cache=1718897750515" rel="stylesheet" />
-		<link href="/ssg/yes/index.html.css?cache=1718897750515" rel="stylesheet" />
-		<script src="/browser.js?cache=1718897750515" type="module"></script>
+		<link href="/styles.css?cache=1718910064262" rel="stylesheet" />
+		<link href="/ssg/yes/index.html.css?cache=1718910064262" rel="stylesheet" />
+		<script src="/browser.js?cache=1718910064262" type="module"></script>
 		<script type="module">import { YesSSGPage } from '/ssg-yes-I6V7B6M5.js';</script>
 		<style data-style="l-yesssgpage"></style>
-		<link href="/l-modalcontainer.css?cache=1718897750450" rel="stylesheet" />
-		<link href="/l-nav.css?cache=1718897750452" rel="stylesheet" />
+		<link href="/l-modalcontainer.css?cache=1718910064196" rel="stylesheet" />
+		<link href="/l-nav.css?cache=1718910064198" rel="stylesheet" />
 	</head>
 	<body is="l-app">
 		<nav is="l-nav">
