Seems to work but needs tests

--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -8,16 +8,19 @@
 		<title>Home page</title>
 		<base href="/" />
 		<link href="/styles.css?cache=1718910064251" rel="stylesheet" />
-		<link href="/index.html.css?cache=1718910064251" rel="stylesheet" />
+		<link
+			data-l-indexpage
+			data-l-modalcontainer
+			data-l-nav
+			data-l-textbox
+			data-l-progressmodal
+			data-l-transitiontest
+			data-l-indexpage
+			href="/index.html.css?cache=1718910064251"
+			rel="stylesheet"
+		/>
 		<script src="/browser.js?cache=1718910064251" type="module"></script>
 		<script type="module">import { IndexPage } from '/pages-TSXAJQYJ.js';</script>
-		<style data-style="l-indexpage"></style>
-		<link href="/l-modalcontainer.css?cache=1718910064196" rel="stylesheet" />
-		<link href="/l-nav.css?cache=1718910064198" rel="stylesheet" />
-		<link href="/l-textbox.css?cache=1718910064234" rel="stylesheet" />
-		<link href="/l-progressmodal.css?cache=1718910064235" rel="stylesheet" />
-		<link href="/l-transitiontest.css?cache=1718910064236" rel="stylesheet" />
-		<link href="/l-indexpage.css?cache=1718910064237" rel="stylesheet" />
 	</head>
 	<body is="l-app">
 		<nav is="l-nav">
