--- a/util/browser.spec.html
+++ b/util/browser.spec.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8" />
+		<meta content="test" name="description" />
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<title>Specs</title>
 		<style>
 svg {
